Convert analysis to async task
Use celery to convert file analysis (using CFGFast()) to an
asynchronous task. Response back to client has not yet been implemented

--- a/frontend/src/components/FunctionList.css
+++ b/frontend/src/components/FunctionList.css
@@ -25,3 +25,8 @@
     cursor: pointer;
     background-color: #5b92e5;
 }
+
+.function-highlight {
+    color: white;
+    background-color: #5b92e5;
+}
