--- a/frontend/src/pages/AnalysisPage.css
+++ b/frontend/src/pages/AnalysisPage.css
@@ -5,7 +5,7 @@
 
 .component-wrapper {
     border: 1px solid #5b92e5;
-    /* width: fit-content; */
+    width: fit-content;
 }
 
 .component-title {
