Preliminary function control flow graph analysis
NOTE: It it WAY too expensive right now. These should be called
on a per-function basis, however, the knowledge base with either
need to be serialized, or the nodes instead associated with
DB entries.

--- a/frontend/src/pages/AnalysisPage.css
+++ b/frontend/src/pages/AnalysisPage.css
@@ -1,11 +1,12 @@
 .analysis-container {
     display: flex;
+    flex-direction: row;
     gap: 1rem;
 }
 
 .component-wrapper {
     border: 1px solid #5b92e5;
-    width: fit-content;
+    /* width: fit-content; */
 }
 
 .component-title {
