--- a/frontend/src/pages/AnalysisPage.css
+++ b/frontend/src/pages/AnalysisPage.css
@@ -1,12 +1,13 @@
 .analysis-container {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* gap: 1rem; */
 }
 
 .component-wrapper {
     border: 1px solid #5b92e5;
     /* width: fit-content; */
+    height: 33vh;
 }
 
 .component-title {
@@ -20,5 +21,9 @@
 .component-body {
     padding: 0.5rem;
     overflow-y: scroll;
-    max-height: 50vh;
+    height: calc(100% - 3.2rem); /* Adjust 2rem to the height of .component-title */
+}
+
+.function-listing-container {
+    height: 200px;
 }
