--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,14 +1,3 @@
-body {
-    margin: 1rem;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-ul, li {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-html, body {
-    height: 100%;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
