--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,3 +6,18 @@
 .react-flow__handle {
     opacity: 0;
 }
+
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 7px;
+    height: 7px;
+  }
+  ::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0, .5);
+    -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
+  }
+
+  pre {
+    padding: 0px;
+  }
